[Front, Back] 로그에 중복 참조 발생 미해결